--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,3 @@
-/*
- * Author: Carlos Alvarez
- * URL: http://alvarez.is
- *
- * Theme Name: Basic
- * URL: http://blacktie.co
- * Version: 1.0
- */
-
-/*	################################################################
-	1. GENERAL STRUCTURES
-################################################################# */
-
 /* Import fonts */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
 
@@ -384,9 +371,13 @@ input {
 }
 
 #github, #linkedin, #email {
-	font-size: 5em;
+	font-size: 3em;
 }
 
 .network-name {
 	font-size: 2em;
+}
+
+.pp_description{
+	color: black;
 }
